# verifiedsignal

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: __init__.py  main.py  rate_limit.py
app/api/: deps.py
app/api/routes/: collections.py  documents.py  events.py  health.py  info.py  (+4 more)
app/auth/: __init__.py  dependencies.py  jwt_verify.py  placeholder.py  supabase_service.py
app/core/: config.py
app/db/: models.py  session.py
app/domain/: model_writeback_constants.py
app/pipeline/: __init__.py  constants.py
app/repositories/: collection_repository.py  document_repository.py  model_writeback_repository.py  pipeline_repository.py
app/schemas/: auth_api.py  collection.py  document.py  health.py  model_writeback.py  pipeline.py  search.py
app/services/: bayes_fusion_score.py  collection_analytics_service.py  collection_service.py  dev_auth_bootstrap.py  document_access.py  document_service.py  document_text_extract.py  event_service.py  exceptions.py  heuristic_score.py  model_writeback_governance.py  model_writeback_service.py  opensearch_document_index.py  pipeline_extract_index.py  pipeline_run_service.py  pipeline_stage_work.py  pipeline_status_service.py  queue_backend.py  queue_service.py  score_document_worker.py  score_http_remote.py  search_filters.py  search_service.py  storage_service.py  url_ingest_fetch.py  url_ingest_ssrf.py  url_ingest_worker.py  user_metadata.py  writeback_ingestion.py
apps/api/: requirements.txt
apps/web/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.api-mock.config.ts  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vitest.config.ts
config/: application.example.yml
db/: README.md
db/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_intake_document_fields.down.sql  002_intake_document_fields.up.sql  003_document_body_text.down.sql  003_document_body_text.up.sql  005_documents_user_metadata.down.sql  005_documents_user_metadata.up.sql  007_model_writebacks.down.sql  007_model_writebacks.up.sql
docs/: auth-supabase.md  external-scorer-implementation-guide.md  mcp-claude-desktop.md  model-writeback.md  pipeline-stages.md  scoring-bayesian-fusion.md  scoring-http.md  tenancy-postgres.md  url-ingest.md
docs/end-user/: README.md  documents.md  getting-started.md  search-and-events.md  signing-in.md  status-and-troubleshooting.md  workspace-and-collections.md
mcp_server/: __init__.py  config.py  main.py  prompts.py  resources.py  runtime.py  server.py  tools.py
mcp_server/adapters/: __init__.py  models_adapter.py  verifiedsignal_client.py
mcp_server/schemas/: __init__.py
postman/: VerifiedSignal.local.postman_collection.json
scripts/: verify_mcp_smoke.py
scripts/reference_http_scorer/: __init__.py  app.py  run.sh
src/verifiedsignal/: __main__.py  cli.py
supabase/: README.md
tests/: README.md  conftest.py
tests/e2e/: test_api_http.py  test_compose_config.py  test_search_http.py
tests/integration/: conftest.py  test_api_routes.py  test_auth_search_sse.py  test_collections_and_pipeline.py  test_document_intake.py  test_model_writebacks_api.py  test_pipeline_and_analytics_api.py  test_schema_constraints.py  test_schema_metadata.py  test_score_http_worker.py  test_search_metadata.py  test_search_pipeline.py  test_sse_redis_pubsub.py  test_url_ingest.py
tests/mcp/: test_config.py  test_mcp_registration.py  test_models_adapter.py  test_prompts.py  test_verifiedsignal_client.py
tests/unit/: test_bayes_fusion_score.py  test_cli.py  test_dev_auth_bootstrap.py  test_document_intake_run.py  test_document_repository_intake_title.py  test_document_service.py  test_document_text_extract.py  test_event_hub.py  test_facet_aggregation_sync.py  test_heuristic_score.py  test_intake_queue_and_resolve.py  test_intake_storage.py  test_model_writeback_governance.py  test_model_writeback_service.py  test_package.py  test_production_openapi.py  test_reference_http_scorer_app.py  test_s3_storage.py  test_score_http_remote.py  test_search_filters.py  test_search_service_wiring.py  test_session_auth.py  test_sse_tenancy.py  test_url_ingest_ssrf.py  test_user_metadata.py  test_worker_pipeline.py  test_writeback_ingestion.py
worker/: __init__.py  config.py  events.py  logging.py  main.py  pipeline.py  tasks.py
(+51 files in other folders)
