[project]
name = "veridoc"
version = "0.1.0"
description = "A Document Intelligence Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
veridoc = "veridoc.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "psycopg[binary]>=3.2",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "unit: fast tests with no external services",
    "integration: requires DATABASE_URL and migrations applied to Postgres",
    "e2e: requires Docker CLI (compose file validation)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
